@@ -2,12 +2,16 @@ package org.molgenis.emx2.graphql;
 
 import static graphql.scalars.ExtendedScalars.GraphQLLong;
 import static org.molgenis.emx2.FilterBean.*;
-import static org.molgenis.emx2.Privileges.VIEWER;
+import static org.molgenis.emx2.Operator.IS_NULL;
+import static org.molgenis.emx2.Privileges.*;
+import static org.molgenis.emx2.TableType.ONTOLOGIES;
 import static org.molgenis.emx2.graphql.GraphqlApiFactory.transform;
 import static org.molgenis.emx2.graphql.GraphqlApiMutationResult.Status.SUCCESS;
 import static org.molgenis.emx2.graphql.GraphqlApiMutationResult.typeForMutationResult;
 import static org.molgenis.emx2.graphql.GraphqlConstants.*;
+import static org.molgenis.emx2.graphql.GraphqlCustomTypes.GraphQLJsonAsString;
 import static org.molgenis.emx2.sql.SqlQuery.*;
+import static org.molgenis.emx2.utils.TypeUtils.convertToPrimaryKeyRows;
 
 import graphql.Scalars;
 import graphql.schema.*;
@@ -29,6 +33,10 @@ public class GraphqlTableFieldFactory {
           .name("MolgenisFileDownload")
           .field(GraphQLFieldDefinition.newFieldDefinition().name("id").type(Scalars.GraphQLString))
           .field(GraphQLFieldDefinition.newFieldDefinition().name("size").type(Scalars.GraphQLInt))
+          .field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name("filename")
+                  .type(Scalars.GraphQLString))
           .field(
               GraphQLFieldDefinition.newFieldDefinition()
                   .name("extension")
@@ -142,143 +150,151 @@ public class GraphqlTableFieldFactory {
       tableTypes.put(tableObjectType, GraphQLTypeReference.typeRef(tableObjectType));
       // build the object
       GraphQLObjectType.Builder tableBuilder = GraphQLObjectType.newObject().name(tableObjectType);
-      for (Column col : table.getColumnsIncludingSubclassesExcludingHeadings()) {
-        String id = col.getIdentifier();
-        switch (col.getColumnType().getBaseType()) {
-          case HEADING:
-            // nothing to do
-            break;
-          case FILE:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(fileDownload));
-            break;
-          case BOOL:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLBoolean));
-            break;
-          case BOOL_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLBoolean)));
-            break;
-          case STRING:
-          case TEXT:
-          case LONG:
-          case UUID:
-          case DATE:
-          case DATETIME:
-          case EMAIL:
-          case HYPERLINK:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLString));
-            break;
-          case STRING_ARRAY:
-          case EMAIL_ARRAY:
-          case HYPERLINK_ARRAY:
-          case TEXT_ARRAY:
-          case LONG_ARRAY:
-          case DATE_ARRAY:
-          case DATETIME_ARRAY:
-          case UUID_ARRAY:
-          case JSONB_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLString)));
-            break;
-          case DECIMAL:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLFloat));
-            break;
-          case DECIMAL_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLFloat)));
-            break;
-          case INT:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLInt));
-            break;
-          case INT_ARRAY:
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id)
-                    .type(GraphQLList.list(Scalars.GraphQLInt)));
-            break;
-          case REF:
-            if (hasViewPermission(table)) {
-              tableBuilder.field(
-                  GraphQLFieldDefinition.newFieldDefinition()
-                      .name(id)
-                      .type(createTableObjectType(col.getRefTable()))
-                      .argument(
-                          GraphQLArgument.newArgument()
-                              .name(GraphqlConstants.FILTER_ARGUMENT)
-                              .type(getTableFilterInputType(col.getRefTable()))
-                              .build()));
-            }
-            break;
-          case REF_ARRAY:
-          case REFBACK:
-            if (hasViewPermission(table)) {
-              tableBuilder.field(
-                  GraphQLFieldDefinition.newFieldDefinition()
-                      .name(id)
-                      .type(GraphQLList.list(createTableObjectType(col.getRefTable())))
-                      .argument(
-                          GraphQLArgument.newArgument()
-                              .name(GraphqlConstants.FILTER_ARGUMENT)
-                              .type(getTableFilterInputType(col.getRefTable()))
-                              .build())
-                      .argument(
-                          GraphQLArgument.newArgument()
-                              .name(GraphqlConstants.LIMIT)
-                              .type(Scalars.GraphQLInt)
-                              .build())
-                      .argument(
-                          GraphQLArgument.newArgument()
-                              .name(GraphqlConstants.OFFSET)
-                              .type(Scalars.GraphQLInt)
-                              .build())
-                      .argument(
-                          GraphQLArgument.newArgument()
-                              .name(GraphqlConstants.ORDERBY)
-                              .type(createTableOrderByInputType(col.getRefTable()))
-                              .build()));
-            }
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id + "_agg")
-                    .type(createTableAggregationType(col.getRefTable()))
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.FILTER_ARGUMENT)
-                            .type(getTableFilterInputType(col.getRefTable()))
-                            .build()));
-            tableBuilder.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(id + "_groupBy")
-                    .type(GraphQLList.list(createTableGroupByType(col.getRefTable())))
-                    .argument(
-                        GraphQLArgument.newArgument()
-                            .name(GraphqlConstants.FILTER_ARGUMENT)
-                            .type(getTableFilterInputType(col.getRefTable()))
-                            .build()));
-            break;
-          default:
-            throw new UnsupportedOperationException(
-                "Not yet implemented type " + col.getColumnType());
-        }
+      for (Column col : table.getColumnsWithoutHeadings()) {
+        createTableField(col, tableBuilder);
       }
       tableTypes.put(tableObjectType, tableBuilder.build());
     }
     return tableTypes.get(tableObjectType);
   }
 
+  private void createTableField(Column col, GraphQLObjectType.Builder tableBuilder) {
+    String id = col.getIdentifier();
+    TableMetadata table = col.getTable();
+    switch (col.getColumnType().getBaseType()) {
+      case HEADING:
+        // nothing to do
+        break;
+      case FILE:
+        tableBuilder.field(GraphQLFieldDefinition.newFieldDefinition().name(id).type(fileDownload));
+        break;
+      case BOOL:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLBoolean));
+        break;
+      case BOOL_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLBoolean)));
+        break;
+      case STRING:
+      case TEXT:
+      case LONG:
+      case UUID:
+      case DATE:
+      case DATETIME:
+      case PERIOD:
+      case EMAIL:
+      case HYPERLINK:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLString));
+        break;
+      case JSON:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(GraphQLJsonAsString));
+        break;
+      case STRING_ARRAY:
+      case EMAIL_ARRAY:
+      case HYPERLINK_ARRAY:
+      case TEXT_ARRAY:
+      case LONG_ARRAY:
+      case DATE_ARRAY:
+      case DATETIME_ARRAY:
+      case PERIOD_ARRAY:
+      case UUID_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLString)));
+        break;
+      case DECIMAL:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLFloat));
+        break;
+      case DECIMAL_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLFloat)));
+        break;
+      case INT:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition().name(id).type(Scalars.GraphQLInt));
+        break;
+      case INT_ARRAY:
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id)
+                .type(GraphQLList.list(Scalars.GraphQLInt)));
+        break;
+      case REF:
+        if (hasViewPermission(table)) {
+          tableBuilder.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(id)
+                  .type(createTableObjectType(col.getRefTable()))
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.FILTER_ARGUMENT)
+                          .type(getTableFilterInputType(col.getRefTable()))
+                          .build()));
+        }
+        break;
+      case REF_ARRAY:
+      case REFBACK:
+        if (hasViewPermission(table)) {
+          tableBuilder.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(id)
+                  .type(GraphQLList.list(createTableObjectType(col.getRefTable())))
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.FILTER_ARGUMENT)
+                          .type(getTableFilterInputType(col.getRefTable()))
+                          .build())
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.LIMIT)
+                          .type(Scalars.GraphQLInt)
+                          .build())
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.OFFSET)
+                          .type(Scalars.GraphQLInt)
+                          .build())
+                  .argument(
+                      GraphQLArgument.newArgument()
+                          .name(GraphqlConstants.ORDERBY)
+                          .type(createTableOrderByInputType(col.getRefTable()))
+                          .build()));
+        }
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id + "_agg")
+                .type(createTableAggregationType(col.getRefTable()))
+                .argument(
+                    GraphQLArgument.newArgument()
+                        .name(GraphqlConstants.FILTER_ARGUMENT)
+                        .type(getTableFilterInputType(col.getRefTable()))
+                        .build()));
+        tableBuilder.field(
+            GraphQLFieldDefinition.newFieldDefinition()
+                .name(id + "_groupBy")
+                .type(GraphQLList.list(createTableGroupByType(col.getRefTable())))
+                .argument(
+                    GraphQLArgument.newArgument()
+                        .name(GraphqlConstants.FILTER_ARGUMENT)
+                        .type(getTableFilterInputType(col.getRefTable()))
+                        .build()));
+        break;
+      default:
+        throw new UnsupportedOperationException("Not yet implemented type " + col.getColumnType());
+    }
+  }
+
   private boolean hasViewPermission(TableMetadata table) {
-    return table.getTableType().equals(TableType.ONTOLOGIES)
+    return table.getTableType().equals(ONTOLOGIES)
         || schema.getInheritedRolesForActiveUser().contains(VIEWER.toString());
   }
 
@@ -320,6 +336,8 @@ public class GraphqlTableFieldFactory {
               GraphQLFieldDefinition.newFieldDefinition()
                   .name(column.getIdentifier())
                   .type(createTableObjectType(column.getRefTable())));
+        } else if (!column.isReference() && hasViewPermission(table)) {
+          createTableField(column, groupByBuilder);
         }
       }
       tableGroupByTypes.put(tableGroupByType, groupByBuilder.build());
@@ -329,59 +347,69 @@ public class GraphqlTableFieldFactory {
 
   private GraphQLNamedOutputType createTableAggregationType(TableMetadata table) {
     String tableAggregationType = getTableTypeIdentifier(table) + "Aggregate";
-    if (!tableAggTypes.containsKey(tableAggregationType)) {
-      // put reference in case of self reference
-      tableAggTypes.put(tableAggregationType, GraphQLTypeReference.typeRef(tableAggregationType));
-      // aggregate type
-      GraphQLObjectType.Builder builder = GraphQLObjectType.newObject().name(tableAggregationType);
+
+    if (tableAggTypes.containsKey(tableAggregationType)) {
+      return tableAggTypes.get(tableAggregationType);
+    }
+
+    // put reference in case of self reference
+    tableAggTypes.put(tableAggregationType, GraphQLTypeReference.typeRef(tableAggregationType));
+    // aggregate type
+    GraphQLObjectType.Builder builder = GraphQLObjectType.newObject().name(tableAggregationType);
+    if (schema.hasActiveUserRole(EXISTS) || table.getTableType().equals(ONTOLOGIES)) {
+      builder.field(
+          GraphQLFieldDefinition.newFieldDefinition().name("exists").type(Scalars.GraphQLBoolean));
+    }
+    if (schema.hasActiveUserRole(RANGE) || table.getTableType().equals(ONTOLOGIES)) {
       builder.field(
           GraphQLFieldDefinition.newFieldDefinition().name("count").type(Scalars.GraphQLInt));
-      if (hasViewPermission(table)) {
-        List<Column> aggCols =
-            table.getColumns().stream()
-                .filter(
-                    c ->
-                        ColumnType.INT.equals(c.getColumnType())
-                            || ColumnType.DECIMAL.equals(c.getColumnType())
-                            || ColumnType.LONG.equals(c.getColumnType()))
-                .toList();
-
-        if (aggCols.size() > 0) {
-          GraphQLObjectType.Builder max =
-              GraphQLObjectType.newObject().name(tableAggregationType + "_max");
-          GraphQLObjectType.Builder min =
-              GraphQLObjectType.newObject().name(tableAggregationType + "_min");
-          GraphQLObjectType.Builder sum =
-              GraphQLObjectType.newObject().name(tableAggregationType + "_sum");
-          GraphQLObjectType.Builder avg =
-              GraphQLObjectType.newObject().name(tableAggregationType + "_avg");
-          for (Column col : aggCols) {
-            max.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(col.getIdentifier())
-                    .type(graphQLTypeOf(col)));
-            min.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(col.getIdentifier())
-                    .type(graphQLTypeOf(col)));
-            avg.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(col.getIdentifier())
-                    .type(Scalars.GraphQLFloat));
-            sum.field(
-                GraphQLFieldDefinition.newFieldDefinition()
-                    .name(col.getIdentifier())
-                    .type(graphQLTypeOf(col)));
-          }
-          builder
-              .field(GraphQLFieldDefinition.newFieldDefinition().name(MAX_FIELD).type(max))
-              .field(GraphQLFieldDefinition.newFieldDefinition().name(MIN_FIELD).type(min))
-              .field(GraphQLFieldDefinition.newFieldDefinition().name(AVG_FIELD).type(avg))
-              .field(GraphQLFieldDefinition.newFieldDefinition().name(SUM_FIELD).type(sum));
-        }
-      }
-      tableAggTypes.put(tableAggregationType, builder.build());
     }
+    if (schema.hasActiveUserRole(VIEWER) || table.getTableType().equals(ONTOLOGIES)) {
+      List<Column> aggCols =
+          table.getColumns().stream()
+              .filter(
+                  c ->
+                      ColumnType.INT.equals(c.getColumnType())
+                          || ColumnType.DECIMAL.equals(c.getColumnType())
+                          || ColumnType.LONG.equals(c.getColumnType()))
+              .toList();
+
+      if (!aggCols.isEmpty()) {
+        GraphQLObjectType.Builder max =
+            GraphQLObjectType.newObject().name(tableAggregationType + "_max");
+        GraphQLObjectType.Builder min =
+            GraphQLObjectType.newObject().name(tableAggregationType + "_min");
+        GraphQLObjectType.Builder sum =
+            GraphQLObjectType.newObject().name(tableAggregationType + "_sum");
+        GraphQLObjectType.Builder avg =
+            GraphQLObjectType.newObject().name(tableAggregationType + "_avg");
+        for (Column col : aggCols) {
+          max.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(col.getIdentifier())
+                  .type(graphQLTypeOf(col)));
+          min.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(col.getIdentifier())
+                  .type(graphQLTypeOf(col)));
+          avg.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(col.getIdentifier())
+                  .type(Scalars.GraphQLFloat));
+          sum.field(
+              GraphQLFieldDefinition.newFieldDefinition()
+                  .name(col.getIdentifier())
+                  .type(graphQLTypeOf(col)));
+        }
+        builder
+            .field(GraphQLFieldDefinition.newFieldDefinition().name(MAX_FIELD).type(max))
+            .field(GraphQLFieldDefinition.newFieldDefinition().name(MIN_FIELD).type(min))
+            .field(GraphQLFieldDefinition.newFieldDefinition().name(AVG_FIELD).type(avg))
+            .field(GraphQLFieldDefinition.newFieldDefinition().name(SUM_FIELD).type(sum));
+      }
+    }
+    tableAggTypes.put(tableAggregationType, builder.build());
+
     return tableAggTypes.get(tableAggregationType);
   }
 
@@ -398,6 +426,28 @@ public class GraphqlTableFieldFactory {
             GraphQLInputObjectField.newInputObjectField()
                 .name(FILTER_EQUALS)
                 .type(GraphQLList.list(getPrimaryKeyInput(table)))
+                .build());
+      }
+      if (TableType.ONTOLOGIES.equals(table.getTableType())) {
+        filterBuilder.field(
+            GraphQLInputObjectField.newInputObjectField()
+                .name(FILTER_MATCH_INCLUDING_CHILDREN)
+                .type(GraphQLList.list(Scalars.GraphQLString))
+                .build());
+        filterBuilder.field(
+            GraphQLInputObjectField.newInputObjectField()
+                .name(FILTER_MATCH_INCLUDING_PARENTS)
+                .type(GraphQLList.list(Scalars.GraphQLString))
+                .build());
+        filterBuilder.field(
+            GraphQLInputObjectField.newInputObjectField()
+                .name(FILTER_SEARCH_INCLUDING_PARENTS)
+                .type(GraphQLList.list(Scalars.GraphQLString))
+                .build());
+        filterBuilder.field(
+            GraphQLInputObjectField.newInputObjectField()
+                .name(FILTER_MATCH_PATH)
+                .type(GraphQLList.list(Scalars.GraphQLString))
                 .build());
       }
       filterBuilder.field(
@@ -421,6 +471,27 @@ public class GraphqlTableFieldFactory {
               GraphQLInputObjectField.newInputObjectField()
                   .name(col.getIdentifier())
                   .type(getTableFilterInputType(col.getRefTable()))
+                  .build());
+          // prefix _is to ensure we can't clash with column named 'is'
+          filterBuilder.field(
+              GraphQLInputObjectField.newInputObjectField()
+                  .name(FILTER_IS_NULL)
+                  .type(Scalars.GraphQLBoolean)
+                  .build());
+          // in case of single primary key we don't need nested filter object
+          GraphQLInputType refType =
+              col.getReferences().size() == 1
+                  ? getGraphQLInputType(col.getReferences().get(0).getPrimitiveType())
+                  : getPrimaryKeyInput(table);
+          filterBuilder.field(
+              GraphQLInputObjectField.newInputObjectField()
+                  .name(FILTER_MATCH_ALL)
+                  .type(GraphQLList.list(refType))
+                  .build());
+          filterBuilder.field(
+              GraphQLInputObjectField.newInputObjectField()
+                  .name(FILTER_MATCH_ANY)
+                  .type(GraphQLList.list(refType))
                   .build());
         } else if (col.getColumnType().getOperators().length > 0) {
           filterBuilder.field(
@@ -465,10 +536,17 @@ public class GraphqlTableFieldFactory {
       GraphQLInputObjectType.Builder builder =
           GraphQLInputObjectType.newInputObject().name("Molgenis" + typeName + FILTER);
       for (Operator operator : type.getOperators()) {
-        builder.field(
-            GraphQLInputObjectField.newInputObjectField()
-                .name(operator.getName())
-                .type(GraphQLList.list(graphQLTypeOf(column))));
+        if (IS_NULL.equals(operator)) {
+          builder.field(
+              GraphQLInputObjectField.newInputObjectField()
+                  .name(operator.getName())
+                  .type(Scalars.GraphQLBoolean));
+        } else {
+          builder.field(
+              GraphQLInputObjectField.newInputObjectField()
+                  .name(operator.getName())
+                  .type(GraphQLList.list(graphQLTypeOf(column))));
+        }
       }
       columnFilterInputTypes.put(type, builder.build());
     }
@@ -485,13 +563,18 @@ public class GraphqlTableFieldFactory {
         return GraphQLLong;
       case DECIMAL, DECIMAL_ARRAY:
         return Scalars.GraphQLFloat;
+      case JSON:
+        return GraphQLJsonAsString;
       case DATE,
           DATETIME,
+          PERIOD,
           STRING,
           TEXT,
           UUID,
+          FILE,
           DATE_ARRAY,
           DATETIME_ARRAY,
+          PERIOD_ARRAY,
           STRING_ARRAY,
           TEXT_ARRAY,
           EMAIL_ARRAY,
@@ -511,16 +594,21 @@ public class GraphqlTableFieldFactory {
       if (entry.getKey().equals(FILTER_OR) || entry.getKey().equals(FILTER_AND)) {
         List<Map<String, Object>> nested = (List<Map<String, Object>>) entry.getValue();
         List<Filter> nestedFilters =
-            nested.stream()
-                .map(m -> and(convertMapToFilterArray(table, m)))
-                .collect(Collectors.toList());
+            nested.stream().map(m -> and(convertMapToFilterArray(table, m))).toList();
         if (entry.getKey().equals(FILTER_OR)) {
           subFilters.add(or(nestedFilters.toArray(new Filter[nestedFilters.size()])));
         } else {
           subFilters.add(and(nestedFilters.toArray(new Filter[nestedFilters.size()])));
         }
       } else if (entry.getKey().equals(FILTER_SEARCH)) {
-        subFilters.add(f(Operator.TRIGRAM_SEARCH, entry.getValue()));
+        if (entry.getValue() instanceof String && !entry.getValue().toString().trim().equals("")) {
+          subFilters.add(
+              f(
+                  Operator
+                      .TEXT_SEARCH, // might change to trigram search if we learn how to tune for
+                  // short terms
+                  Arrays.stream(entry.getValue().toString().split(" ")).toArray(String[]::new)));
+        }
       } else if (entry.getKey().equals(FILTER_EQUALS)) {
         //  complex filter, should be an list of maps per graphql contract
         if (entry.getValue() != null) {
@@ -529,19 +617,79 @@ public class GraphqlTableFieldFactory {
                   ((List<Map<String, Object>>) entry.getValue())
                       .stream().map(v -> createKeyFilter(table, v)).collect(Collectors.toList())));
         }
+      } else if (entry.getKey().equals(FILTER_MATCH_INCLUDING_CHILDREN)
+          || entry.getKey().equals(FILTER_MATCH_INCLUDING_PARENTS)
+          || entry.getKey().equals(FILTER_MATCH_PATH)
+          || entry.getKey().equals(FILTER_SEARCH_INCLUDING_PARENTS)
+          || entry.getKey().equals(FILTER_MATCH_ALL)) {
+        switch (entry.getKey()) {
+          case FILTER_MATCH_INCLUDING_CHILDREN ->
+              subFilters.add(
+                  f(Operator.MATCH_ANY_INCLUDING_CHILDREN, ((List) entry.getValue()).toArray()));
+          case FILTER_MATCH_INCLUDING_PARENTS ->
+              subFilters.add(
+                  f(Operator.MATCH_ANY_INCLUDING_PARENTS, ((List) entry.getValue()).toArray()));
+          case FILTER_MATCH_PATH ->
+              subFilters.add(f(Operator.MATCH_PATH, ((List) entry.getValue()).toArray()));
+          case FILTER_SEARCH_INCLUDING_PARENTS ->
+              subFilters.add(
+                  f(Operator.SEARCH_INCLUDING_PARENTS, ((List) entry.getValue()).toArray()));
+        }
+        // skip match all, handled on parent column
       } else {
         // find column by escaped name
-        Optional<Column> optional =
-            table.getColumns().stream()
-                .filter(c -> c.getIdentifier().equals(entry.getKey()))
-                .findFirst();
-        if (!optional.isPresent())
+        Column c = table.getColumnByIdentifier(entry.getKey());
+        if (c == null)
           throw new GraphqlException(
               "Graphql API error: Column "
                   + entry.getKey()
                   + " unknown in table "
                   + table.getTableName());
-        Column c = optional.get();
+        Map value = (Map) entry.getValue();
+        // although nested, this should apply on this level, not sublevel
+        if (value.containsKey(FILTER_MATCH_INCLUDING_CHILDREN)) {
+          subFilters.add(
+              f(
+                  c.getName(),
+                  Operator.MATCH_ANY_INCLUDING_CHILDREN,
+                  ((List) value.get(FILTER_MATCH_INCLUDING_CHILDREN)).toArray(new String[0])));
+          value.remove(FILTER_MATCH_INCLUDING_CHILDREN);
+        } else if (value.containsKey(FILTER_SEARCH_INCLUDING_PARENTS)) {
+          subFilters.add(
+              f(
+                  c.getName(),
+                  Operator.SEARCH_INCLUDING_PARENTS,
+                  ((List) value.get(FILTER_SEARCH_INCLUDING_PARENTS)).toArray(new String[0])));
+          value.remove(FILTER_SEARCH_INCLUDING_PARENTS);
+        } else if (value.containsKey(FILTER_MATCH_PATH)) {
+          subFilters.add(
+              f(
+                  c.getName(),
+                  Operator.MATCH_PATH,
+                  ((List) value.get(FILTER_MATCH_PATH)).toArray(new String[0])));
+          value.remove(FILTER_MATCH_PATH);
+        } else if (value.containsKey(FILTER_IS_NULL)) {
+          subFilters.add(f(c.getName(), IS_NULL, value.get(FILTER_IS_NULL)));
+          value.remove(FILTER_IS_NULL);
+        } else if (value.containsKey(FILTER_MATCH_ALL)) {
+          //  complex filter, should be an list of maps per graphql contract
+          if (entry.getValue() != null && c.getReferences().size() > 1) {
+            subFilters.add(
+                f(
+                    c.getName(),
+                    Operator.MATCH_ALL,
+                    convertToPrimaryKeyRows(
+                            c.getRefTable(),
+                            (List<Map<String, Object>>) value.get(FILTER_MATCH_ALL))
+                        .toArray()));
+          } else if (entry.getValue() != null) {
+            subFilters.add(
+                f(c.getName(), Operator.MATCH_ALL, (List<Object>) value.get(FILTER_MATCH_ALL)));
+          }
+          value.remove(FILTER_MATCH_ALL);
+        }
+
+        if (value.size() == 0) continue;
         if (c.isReference()) {
           subFilters.add(
               f(
@@ -553,7 +701,7 @@ public class GraphqlTableFieldFactory {
                           .getSchema(c.getRefTable().getSchemaName())
                           .getTable(c.getRefTableName())
                           .getMetadata(),
-                      (Map) entry.getValue())));
+                      value)));
         } else {
           subFilters.add(convertMapToFilter(c.getName(), (Map<String, Object>) entry.getValue()));
         }
@@ -735,7 +883,7 @@ public class GraphqlTableFieldFactory {
             .type(typeForMutationResult)
             .dataFetcher(fetcher(schema, type));
     for (TableMetadata table : schema.getMetadata().getTables()) {
-      if (table.getColumnsWithoutHeadings().size() > 0) {
+      if (!table.getColumnsWithoutHeadings().isEmpty()) {
         fieldBuilder.argument(
             GraphQLArgument.newArgument()
                 .name(table.getIdentifier())
@@ -874,20 +1022,24 @@ public class GraphqlTableFieldFactory {
       case INT -> Scalars.GraphQLInt;
       case LONG -> GraphQLLong;
       case DECIMAL -> Scalars.GraphQLFloat;
-      case UUID, STRING, TEXT, DATE, DATETIME -> Scalars.GraphQLString;
+      case UUID, STRING, TEXT, DATE, DATETIME, PERIOD -> Scalars.GraphQLString;
       case BOOL_ARRAY -> GraphQLList.list(Scalars.GraphQLBoolean);
       case INT_ARRAY -> GraphQLList.list(Scalars.GraphQLInt);
       case LONG_ARRAY -> GraphQLList.list(GraphQLLong);
       case DECIMAL_ARRAY -> GraphQLList.list(Scalars.GraphQLFloat);
+      case JSON -> GraphqlCustomTypes.GraphQLJsonAsString;
       case STRING_ARRAY,
-          TEXT_ARRAY,
-          DATE_ARRAY,
-          DATETIME_ARRAY,
-          UUID_ARRAY,
-          EMAIL_ARRAY,
-          HYPERLINK_ARRAY -> GraphQLList.list(Scalars.GraphQLString);
-      default -> throw new MolgenisException(
-          "Internal error: Type " + columnType + " not expected at this place");
+              TEXT_ARRAY,
+              DATE_ARRAY,
+              DATETIME_ARRAY,
+              PERIOD_ARRAY,
+              UUID_ARRAY,
+              EMAIL_ARRAY,
+              HYPERLINK_ARRAY ->
+          GraphQLList.list(Scalars.GraphQLString);
+      default ->
+          throw new MolgenisException(
+              "Internal error: Type " + columnType + " not expected at this place");
     };
   }
 }
